# LangChainPractice

./: .gitignore  README.md  pyproject.toml
LocalLLMs/: LocalLLMs.ipynb
browser_agents/: Intro.ipynb
chain_notebooks/: Agents.ipynb  Chains.ipynb  Evaluation.ipynb  Memory.ipynb  QnA.ipynb  intro.ipynb
chains/: chaining.py
essay_writer/: essay_writer.ipynb  essay_writer.py
graph_notebooks/: agent_from_scratch.ipynb  human_in_the_loop.ipynb  langchain_components.ipynb  persistence_streaming.ipynb  tavily_search_tool.ipynb
utils/: helpers.py
